Kubernetes/NGINX/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.ri3d.de`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
